modefication du fichier html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <div class="container" id="container">
         <div class="form-container sign-in">
             <form>
-                <h1>Sign-In</h1>
                 <h1>Create Account</h1>
                 <div class="social-icons">
                     <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
@@ -26,9 +25,38 @@
                 <input type="text" placeholder="Name">
                 <input type="email" placeholder="Email">
                 <input type="password" placeholder="Password">
+                <button>Sign Up</button>
+            </form>
+        </div>
+        <div class="form-container sign-in">
+            <form>
+                <h1>Sign-In</h1>
+                <div class="social-icons">
+                    <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
+                    <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
+                    <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
+                </div>
+                <span>or use your email password</span>
+                <input type="email" placeholder="Email">
+                <input type="password" placeholder="Password">
+                <a href="#">Forget Your Password</a>
                 <button>Sign-In</button>
             </form>
-
+        </div>
+        <div class="toggel-container">
+            <div class="toggel">
+                <div class="toggel-panel toggel-left">
+                    <h1>Welcom Back!</h1>
+                    <p>Enter your personal details to use allof site features</p>
+                    <button class="hidden" id="login">Sign In</button>
+                </div>
+                <div class="toggel-panel toggel-right">
+                    <h1>Hello, Friend!</h1>
+                    <p>Regester with your personal details to use allof site features</p>
+                    <button class="hidden" id="regester">Sign Up</button>
+                </div>
+            </div>
         </div>
     </div>
 
